Issue #908 - Update constraint-layout version, use version directly.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -145,7 +145,7 @@ dependencies {
     implementation "com.android.support:design:$support_libraries_version"
     implementation "com.android.support:leanback-v17:$support_libraries_version"
     implementation "com.android.support:recyclerview-v7:$support_libraries_version"
-    implementation "com.android.support.constraint:constraint-layout:$constrained_layout_version"
+    implementation "com.android.support.constraint:constraint-layout:1.1.2"
 
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'com.squareup.picasso:picasso:2.71828', {
