--- a/app/build.gradle
+++ b/app/build.gradle
@@ -383,6 +383,45 @@ task checkstyle(type: Checkstyle) {
     classpath = files()
 }
 
+if (project.hasProperty("coverage")) {
+    tasks.withType(Test) {
+        jacoco.includeNoLocationClasses = true
+    }
+
+    android.applicationVariants.all { variant ->
+        // We dynamically generate our jacoco tasks to avoid creating too many build variants,
+        // which takes up space in AS despite not being run by most users and it can accidentally
+        // be run during CI with commands like `./gradlew test`, taking up more build time.
+        task "jacoco${variant.name.capitalize()}TestReport"(type: JacocoReport,
+                dependsOn: ["test${variant.name.capitalize()}UnitTest"]) {
+            reports {
+                html.enabled true
+                xml.enabled true
+            }
+            def fileFilter = ['**/R.class', '**/R$*.class', '**/BuildConfig.*', '**/Manifest*.*',
+                              '**/*Test*.*', 'android/**/*.*', '**/*$[0-9].*']
+            def kotlinTree = fileTree(dir: "$project.buildDir/tmp/kotlin-classes/${variant.name}", excludes: fileFilter)
+            def javaTree = fileTree(dir: "$project.buildDir/intermediates/classes/${variant.flavorName}/${variant.buildType.name}",
+                    excludes: fileFilter)
+            def mainSrc = "$project.projectDir/src/main/java"
+            sourceDirectories = files([mainSrc])
+            classDirectories = files([kotlinTree, javaTree])
+            executionData = fileTree(dir: project.buildDir, includes: [
+                    "jacoco/test${variant.name.capitalize()}UnitTest.exec", 'outputs/code-coverage/connected/*coverage.ec'
+            ])
+        }
+    }
+
+    android {
+        buildTypes {
+            debug {
+                testCoverageEnabled true
+                applicationIdSuffix ".coverage"
+            }
+        }
+    }
+}
+
 afterEvaluate {
     check.dependsOn 'findbugs', 'pmd', 'checkstyle'
 }
