Issue #1008: Enable patch check in codecov.

--- a/codecov.yml
+++ b/codecov.yml
@@ -13,7 +13,7 @@ coverage:
        if_not_found: success
     patch:
       default:
-        enabled: no
+        enabled: yes
         if_not_found: success
     changes:
       default:
