--- a/.travis.yml
+++ b/.travis.yml
@@ -1,39 +1,45 @@
-language: android
+matrix:
+  include:
+    - language: android
+      jdk:
+        - oraclejdk8
+      android:
+        components:
+          - tools
+          - platform-tools
+          - build-tools-27.0.3
+          - android-27
+          - extra-google-google_play_services
+          - extra-google-m2repository
+          - extra-android-m2repository
+      sudo: false
+      before_install:
+        - yes | sdkmanager "platforms;android-27"
+        - touch local.properties
+      script:
+        - pushd tools/danger
+        - ./gradlew clean assemble
+        - echo "--" > .adjust_token
+        - ./gradlew -Pcoverage jacocoDebugTestReport
+      after_success:
+        - bash <(curl -s https://codecov.io/bash)
+      before_cache:
+        - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+        - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+      cache:
+        directories:
+          - $HOME/.gradle/caches/
+          - $HOME/.gradle/wrapper/
+          - $HOME/.android/build-cache
 
-jdk:
-  - oraclejdk8
-
-android:
-  components:
-    - tools
-    - platform-tools
-    - build-tools-27.0.3
-    - android-27
-    - extra-google-google_play_services
-    - extra-google-m2repository
-    - extra-android-m2repository
-
-sudo: false
-
-before_install:
-  - yes | sdkmanager "platforms;android-27"
-  - touch local.properties
-
-script:
-  - ./gradlew clean assemble
-  - echo "--" > .adjust_token
-  - ./gradlew -Pcoverage jacocoDebugTestReport
-
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
-
-before_cache:
-  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-
-cache:
-  directories:
-    - $HOME/.gradle/caches/
-    - $HOME/.gradle/wrapper/
-    - $HOME/.android/build-cache
-
+    - language: node_js
+      node_js:
+        - "lts/*"
+      install:
+        - cd tools/danger
+        - npm ci
+      script:
+        - cd tools/danger
+        - ./gradlew build
+        - cd build/classes/kotlin/main
+        - ../../../../node_modules/.bin/danger ci
