--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,19 +53,11 @@ android {
     flavorDimensions "engine"
 
     productFlavors {
-        chromium {
+        system {
             dimension "engine"
         }
 
-        geckoNightly {
-            dimension "engine"
-        }
-
-        geckoBeta {
-            dimension "engine"
-        }
-
-        geckoRelease {
+        gecko {
             dimension "engine"
         }
     }
@@ -100,6 +92,11 @@ repositories {
     jcenter()
 }
 
+configurations {
+    systemImplementation {}
+    geckoImplementation {}
+}
+
 dependencies {
     implementation 'io.sentry:sentry-android:1.7.9'
 
@@ -129,7 +126,6 @@ dependencies {
 
     implementation "org.mozilla.components:session:$moz_components_version"
     implementation "org.mozilla.components:engine:$moz_components_version"
-    implementation "org.mozilla.components:engine-system:$moz_components_version"
     implementation "org.mozilla.components:telemetry:$moz_components_version"
     implementation "org.mozilla.photon:colors:$moz_components_version"
     implementation "org.mozilla.photon:fonts:$moz_components_version"
@@ -138,6 +134,9 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines_version"
+
+    systemImplementation "org.mozilla.components:engine-system:$moz_components_version"
+    geckoImplementation "org.mozilla.components:engine-gecko:$moz_components_version"
 
     testImplementation 'junit:junit:4.12'
     testImplementation "org.robolectric:robolectric:3.7.1"
