--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     ext.architecture_components_version = '1.1.1'
     ext.espresso_version = '3.0.1'
     ext.kotlin_version = '1.2.71'
-    ext.moz_components_version = '0.25.1'
+    ext.moz_components_version = '0.26.0'
     ext.kotlin_coroutines_version = '0.22.5'
 
     repositories {
@@ -38,6 +38,9 @@ detekt {
 
 allprojects {
     repositories {
+        maven {
+            url "https://maven.mozilla.org/maven2"
+        }
         jcenter()
         google()
     }
