--- a/build.gradle
+++ b/build.gradle
@@ -25,17 +25,15 @@ buildscript {
 }
 
 plugins {
-    id "io.gitlab.arturbosch.detekt" version "1.0.0.RC5-6"
+    id "io.gitlab.arturbosch.detekt" version "1.0.0.RC9.2"
     id "org.jetbrains.kotlin.kapt" version "1.2.0"
 }
 
 detekt {
-    version = "1.0.0.RC6-4"
-    profile("main") {
-        input = "$projectDir"
-        config = "$projectDir/quality/detekt.yml"
-        filters = ".*test.*,.*/resources/.*,.*/tmp/.*"
-    }
+    toolVersion = "1.0.0.RC9.2"
+    input = files("$projectDir")
+    config = files("$projectDir/quality/detekt.yml")
+    filters = ".*test.*,.*/resources/.*,.*/tmp/.*"
 }
 
 allprojects {
