Closes #1269: Correct gradle 5.0 deprecation warnings.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -361,7 +361,7 @@ task pmd(type: Pmd, group: 'verification') {
         xml.enabled = false
         html.enabled = true
         html {
-            destination "$projectDir.absolutePath/build/reports/pmd/pmd.html"
+            destination file("$projectDir.absolutePath/build/reports/pmd/pmd.html")
         }
     }
 }
