Issue #1280: Only assembleDebug on travis.
TaskCluster builds release builds so we don't need to duplicate that
effort.

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
   - touch local.properties
 
 script:
-  - ./gradlew clean assemble
+  - ./gradlew clean assembleDebug
   - echo "--" > .adjust_token
   - ./gradlew -Pcoverage jacocoDebugTestReport
 
