Closes #1280: Add -PisPullRequest flag to disable certain checks for validation.
I don't love this approach: I'm afraid it could be used to produce
different build behaviors on CI PRs/master merges than locally or for
release builds. However, our release build task doesn't used this option

One alternative is to create a more specific flag: `-PnoGitTag`.
However, it's not flexible enough to accomodate other checks that should not
run on PR (e.g. requiring API secrets).

Alternative approaches we considered to solve the problem that the
buildVersion != git tag version are:
- Don't run any checks on CI (but, when they're working, it's useful for CI
release builds)
- Use a separate `release` task that makes these checks (but devs probably
would forget to run it locally).

--- a/.taskcluster.yml
+++ b/.taskcluster.yml
@@ -36,7 +36,7 @@ tasks:
           && git fetch {{ event.head.repo.url }} {{ event.head.repo.branch }}
           && git config advice.detachedHead false
           && git checkout {{event.head.sha}}
-          && ./gradlew clean assemble assembleAndroidTest lint checkstyle ktlint pmd detekt test
+          && ./gradlew -PisPullRequest clean assemble assembleAndroidTest lint checkstyle ktlint pmd detekt test
       artifacts:
         'public':
           type: 'directory'
@@ -80,7 +80,7 @@ tasks:
           && git fetch {{ event.head.repo.url }}
           && git config advice.detachedHead false
           && git checkout {{event.head.sha}}
-          && ./gradlew clean assemble lint checkstyle ktlint pmd detekt test
+          && ./gradlew -PisPullRequest clean assemble assembleAndroidTest lint checkstyle ktlint pmd detekt test
       artifacts:
         'public':
           type: 'directory'
