--- a/app/build.gradle
+++ b/app/build.gradle
@@ -125,6 +125,9 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines_version"
 
+    implementation "android.arch.lifecycle:extensions:$architecture_components_version"
+    testImplementation "android.arch.core:core-testing:$architecture_components_version"
+
     testImplementation 'junit:junit:4.12'
     testImplementation "org.robolectric:robolectric:4.0-alpha-3" // required for SDK 28
     testImplementation 'org.mockito:mockito-core:2.21.0'
