--- a/app/build.gradle
+++ b/app/build.gradle
@@ -244,7 +244,7 @@ android.applicationVariants.all { variant ->
 
 // -------------------------------------------------------------------------------------------------
 // L10N: Generate list of locales
-// Focus provides its own (Android independent) locale switcher. That switcher requires a list
+// Firefox TV provides its own (Android independent) locale switcher. That switcher requires a list
 // of locale codes. We generate that list here to avoid having to manually maintain a list of locales:
 // -------------------------------------------------------------------------------------------------
 
@@ -287,7 +287,7 @@ def getEnabledLocales() {
     return langs.sort { it }
 }
 
-def generatedLocaleListDir = 'src/main/java/org/mozilla/focus/generated'
+def generatedLocaleListDir = 'src/main/java/org/mozilla/tv/firefox/generated'
 def generatedLocaleListFilename = 'LocaleList.java'
 
 task generateLocaleList {
@@ -298,7 +298,7 @@ task generateLocaleList {
 
         localeList.delete()
         localeList.createNewFile()
-        localeList << "package org.mozilla.focus.generated;" << "\n" << "\n"
+        localeList << "package org.mozilla.tv.firefox.generated;" << "\n" << "\n"
         localeList << "import java.util.Arrays;" << "\n"
         localeList << "import java.util.Collections;" << "\n"
         localeList << "import java.util.List;" << "\n"
