--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name="org.mozilla.tv.firefox.FocusApplication"
+        android:name="org.mozilla.tv.firefox.FirefoxApplication"
         android:usesCleartextTraffic="true"
         tools:ignore="UnusedAttribute">
 
