Issue #1045: substitute new Application for Espresso tests

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,9 @@ android {
         versionCode 11 // This versionCode is "frozen" for local builds. For "release" builds we
         // override this with a generated versionCode at build time.
         versionName "3.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        // NOTE: if your Espresso tests don't work with this test runner, try deleting your existing
+        // test configurations and rerunning
+        testInstrumentationRunner "org.mozilla.tv.firefox.FirefoxTestRunner"
 
         multiDexEnabled true
     }
