--- a/app/build.gradle
+++ b/app/build.gradle
@@ -146,6 +146,7 @@ dependencies {
     androidTestImplementation "com.android.support.test.espresso:espresso-web:$espresso_version", {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
+    androidTestImplementation "com.android.support.test:rules:1.0.2"
 
     androidTestImplementation 'com.squareup.okhttp3:mockwebserver:3.10.0'
     testImplementation 'com.squareup.okhttp3:mockwebserver:3.10.0'
