Issue #1391: Upgrade robolectric to 4.0.1 and add androix.test.core

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,8 +124,10 @@ dependencies {
     testImplementation "android.arch.core:core-testing:$architecture_components_version"
 
     testImplementation 'junit:junit:4.12'
-    testImplementation "org.robolectric:robolectric:4.0-alpha-3" // required for SDK 28
+    testImplementation "org.robolectric:robolectric:4.0.1" // required for SDK 28
     testImplementation 'org.mockito:mockito-core:2.21.0'
+
+    testImplementation 'androidx.test:core:1.0.0' // required for robolectric 4.0+
 
     androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
 
