--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,6 @@ org.gradle.jvmargs=-Xmx1536m
 # Android Studio sets android.inject.testOnly automatically on some APKs that are ran from the IDE
 # However on some devices the APK can not be installed. This is a work-around
 android.inject.testOnly = false
+
+# Required for Robolectric 4.0+
+android.enableUnitTestBinaryResources=true
