--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ import org.mozilla.gradle.tasks.ValidateAndroidAppReleaseConfiguration
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'findbugs'
 apply plugin: 'jacoco'
 apply plugin: 'pmd'
