Closes #1504 - Temporarily turn off youtube casting.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -116,9 +116,11 @@
             android:name="android.webkit.WebView.MetricsOptOut"
             android:value="true" />
 
+        <!-- Turn of temporarily #1504
         <meta-data
             android:name="whisperplay"
             android:resource="@xml/whisperplay"/>
+            -->
 
     </application>
 
