--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ android {
         // override this with a generated versionCode at build time.
         versionName "3.1.3"
         testInstrumentationRunner "org.mozilla.tv.firefox.FirefoxTestRunner"
+        testInstrumentationRunnerArguments clearPackageData: 'true'
 
         multiDexEnabled true
     }
