--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,8 +89,6 @@ dependencies {
     implementation "com.android.support:leanback-v17:$support_libraries_version"
     implementation "com.android.support:recyclerview-v7:$support_libraries_version"
     implementation "com.android.support.constraint:constraint-layout:1.1.3"
-
-    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'com.squareup.picasso:picasso:2.71828', {
         // We temporarily don't include the packaged the support libs to avoid version mismatch.
         // This can cause runtime errors so we should remove this ASAP! #883?
@@ -106,6 +104,8 @@ dependencies {
         transitive = false
     }
 
+    implementation "org.mozilla.components:lib-fetch-okhttp:$moz_components_version"
+    implementation "org.mozilla.components:lib-fetch-httpurlconnection:$moz_components_version"
     implementation "org.mozilla.components:browser-session:$moz_components_version"
     implementation "org.mozilla.components:browser-search:$moz_components_version"
     implementation "org.mozilla.components:browser-domains:$moz_components_version"
