No issue: sdkmanager accept license for sdk28 on release builds

--- a/.taskcluster.yml
+++ b/.taskcluster.yml
@@ -122,6 +122,7 @@ tasks:
           git fetch origin --tags
           && git config advice.detachedHead false
           && git checkout {{ event.version }}
+          && yes | sdkmanager --licenses
           && python tools/taskcluster/get-sentry-token.py
           && python tools/taskcluster/get-pocket-token.py
           && ./gradlew --no-daemon clean test assembleRelease
